versions/v2.8/modules/en/pages/installation-and-upgrade/upgrades.adoc
= Upgrades

The following instructions will guide you through upgrading a Rancher server that was installed on a Kubernetes cluster with Helm. These steps also apply to air-gapped installs with Helm.

For the instructions to upgrade Rancher installed with Docker, refer to xref:../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc[this page.]

To upgrade the components in your Kubernetes cluster, or the definition of the https://rancher.com/docs/rke/latest/en/config-options/services/[Kubernetes services] or https://rancher.com/docs/rke/latest/en/config-options/add-ons/[add-ons], refer to the https://rancher.com/docs/rke/latest/en/upgrades/[upgrade documentation for RKE], the Rancher Kubernetes Engine.

== Prerequisites

=== Access to kubeconfig

Helm should be run from the same location as your kubeconfig file, or the same location where you run your kubectl commands from.

If you installed Kubernetes with RKE, the config will have been created in the directory you ran `rke up` in.

The kubeconfig can also be manually targeted for the intended cluster with the `--kubeconfig` tag (see: https://helm.sh/docs/helm/helm/)

=== Review Known Issues

Review the list of known issues for each Rancher version, which can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums.]

Note that upgrades _to_ or _from_ any chart in the xref:../getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#_helm_chart_repositories[rancher-alpha repository] aren't supported.

=== Helm Version

include::shared:ROOT:partial$en/deprecation-helm2.adoc[]

The upgrade instructions assume you are using Helm 3.

For migration of installs started with Helm 2, refer to the official https://helm.sh/blog/migrate-from-helm-v2-to-helm-v3/[Helm 2 to 3 migration docs.] The xref:/versioned_docs/version-2.0-2.4/getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades/helm2.adoc[Helm 2 upgrade page here]provides a copy of the older upgrade instructions that used Helm 2, and it is intended to be used if upgrading to Helm 3 is not feasible.

=== For air-gapped installs: Populate private registry

For xref:other-installation-methods/air-gapped/air-gapped.adoc[air-gapped installs only,] collect and populate images for the new Rancher server version. Follow the guide to xref:other-installation-methods/air-gapped/publish-images.adoc[populate your private registry] with the images for the Rancher version that you want to upgrade to.

=== For upgrades with cert-manager older than 0.8.0

https://community.letsencrypt.org/t/blocking-old-cert-manager-versions/98753[Let's Encrypt will be blocking cert-manager instances older than 0.8.0 starting November 1st 2019.] Upgrade cert-manager to the latest version by following xref:resources/upgrade-cert-manager.adoc[these instructions.]

== Upgrade Outline

Follow the steps to upgrade Rancher server:

=== 1. Back up Your Kubernetes Cluster that is Running Rancher Server

Use the xref:../rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc[backup application] to back up Rancher.

You'll use the backup as a restore point if something goes wrong during upgrade.

=== 2. Update the Helm chart repository

. Update your local Helm repo cache:
+
----
 helm repo update
----

. Get the repository name that you used to install Rancher.
+
For information about the repos and their differences, see xref:../getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#_helm_chart_repositories[Helm Chart Repositories].

 ** Latest: Recommended for trying out the newest features
+
----
  helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
----

 ** Stable: Recommended for production environments
+
----
  helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
----

 ** Alpha: Experimental preview of upcoming releases.
+
----
  helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
----
+
NOTE: Upgrades are not supported to, from, or between Alphas.

+
----
 helm repo list

 NAME          	       URL
 stable        	       https://charts.helm.sh/stable
 rancher-<CHART_REPO>	 https://releases.rancher.com/server-charts/<CHART_REPO>
----
+

[NOTE]
====
+
If you want to switch to a different Helm chart repository, please follow the xref:../getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#_switching_to_a_different_helm_chart_repository[steps on how to switch repositories]. If you switch repositories, make sure to list the repositories again before continuing onto Step 3 to ensure you have the correct one added.
+
====


. Fetch the latest chart to install Rancher from the Helm chart repository.
+
This command will pull down the latest charts and save it in the current directory as a `.tgz` file.
+
[,plain]
----
 helm fetch rancher-<CHART_REPO>/rancher
----
+
You can fetch the chart for the specific version you are upgrading to by adding in the `--version=` tag.  For example:
+
[,plain]
----
 helm fetch rancher-<CHART_REPO>/rancher --version=2.6.8
----

=== 3. Upgrade Rancher

This section describes how to upgrade normal (Internet-connected) or air-gapped installations of Rancher with Helm.

[NOTE]
.Air Gap Instructions:
====

If you are installing Rancher in an air-gapped environment, skip the rest of this page and render the Helm template by following the instructions on xref:other-installation-methods/air-gapped/upgrades.adoc[this page.]
====


Get the values, which were passed with `--set`, from the current Rancher Helm chart that is installed.

----
helm get values rancher -n cattle-system

hostname: rancher.my.org
----

[NOTE]
====

There will be more values that are listed with this command. This is just an example of one of the values.
====


[TIP]
====

Your deployment name may vary; for example, if you're deploying Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
Thus:

----
helm get values rancher-stable -n cattle-system

hostname: rancher.my.org
----
====


If you are upgrading cert-manager to the latest version from v1.5 or below, follow the link:resources/upgrade-cert-manager.adoc#option-c-upgrade-cert-manager-from-versions-15-and-below[cert-manager upgrade docs] to learn how to upgrade cert-manager without needing to perform an uninstall or reinstall of Rancher. Otherwise, follow the <<_steps_to_upgrade_rancher,steps to upgrade Rancher>> below.

==== Steps to Upgrade Rancher

Upgrade Rancher to the latest version with all your settings.

Take all the values from the previous step and append them to the command using `--set key=value`.

For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.

----
helm upgrade rancher rancher-<CHART_REPO>/rancher \
  --namespace cattle-system \
  --set hostname=rancher.my.org
----

[NOTE]
====

The above is an example, there may be more values from the previous step that need to be appended.
====


[TIP]
====

If you deploy Rancher through the AWS Marketplace, the deployment name is 'rancher-stable'.
Thus:

----
helm upgrade rancher-stable rancher-<CHART_REPO>/rancher \
  --namespace cattle-system \
  --set hostname=rancher.my.org
----
====


Alternatively, it's possible to export the current values to a file and reference that file during upgrade. For example, to only change the Rancher version:

. Export the current values to a file:
+
----
 helm get values rancher -n cattle-system -o yaml > values.yaml
----

. Update only the Rancher version:
+
For Kubernetes v1.25 or later, set `global.cattle.psp.enabled` to `false` when using Rancher v2.7.2-v2.7.4. This is not necessary for Rancher v2.7.5 and above, but you can still manually set the option if you choose.
+
----
 helm upgrade rancher rancher-<CHART_REPO>/rancher \
   --namespace cattle-system \
   -f values.yaml \
   --version=2.6.8
----

=== 4. Verify the Upgrade

Log into Rancher to confirm that the upgrade succeeded.

[TIP]
====

Having network issues following upgrade?

See xref:/versioned_docs/version-2.0-2.4/getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades/namespace-migration.adoc[Restoring Cluster Networking].
====


== Known Upgrade Issues

A list of known issues for each Rancher version can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums.]
